# aquarius-cantina-fv

./: .gitignore
access_control/: Cargo.toml  Taskfile.yaml  certora_build.py
access_control/confs/: access_control_rules.conf  simple_test_verified.conf
access_control/src/: dummy_contract.rs  lib.rs  test_failed_rule.rs
access_control/src/certora_specs/: access_control_rules.rs  access_control_verified.rs  mod.rs
contracts/: soroban_liquidity_pool_contract.wasm  soroban_liquidity_pool_liquidity_calculator_contract.wasm  soroban_liquidity_pool_plane_contract.wasm  soroban_liquidity_pool_provider_swap_fee_contract.wasm  soroban_liquidity_pool_provider_swap_fee_factory_contract.wasm  soroban_liquidity_pool_router_contract.wasm  soroban_liquidity_pool_stableswap_contract.wasm  soroban_locker_feed_contract.wasm  soroban_token_contract.wasm
fees_collector/collection/: README.txt  access_control_authorization_simple__collect.json  access_control_emergency_mode__collect.json  access_control_role_symbol__collect.json  access_control_set_role_address__collect.json  access_control_set_role_addresses__collect-ERROR.json  access_control_storage_edge_cases__collect.json  access_control_transfer_ownership__collect-ERROR.json  fees_collector_comprehensive__collect.json  fees_collector_mutant_0__collect.json  fees_collector_mutant_1__collect.json  fees_collector_mutant_2__collect.json  starter__collect.json
fees_collector/confs/: access_control_authorization_simple_verified.conf  access_control_comprehensive_verified.conf  access_control_emergency_mode_verified.conf  (+11 more)
(+25 files in other folders)
