[package]
name = "access_control"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
certora = ["cvlr", "cvlr-soroban", "cvlr-soroban-macros", "cvlr-soroban-derive"]

[dependencies]
soroban-sdk = { workspace = true }
utils = { workspace = true }
liquidity-pool-validation-errors = { workspace = true }

cvlr = { workspace = true, default-features = false, optional = true }
cvlr-soroban = { workspace = true, optional = true }
cvlr-soroban-macros = { workspace = true, optional = true }
cvlr-soroban-derive = { workspace = true, optional = true }

[dev-dependencies]
utils = { workspace = true, features = ["testutils"] }